--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -54,7 +54,7 @@
             android:gravity="center"
             app:layout_constraintBottom_toTopOf="@id/uploadProducts_Button"
             app:setAnyText="@{viewModel.productStatus}"
-            tools:text="Last Uploaded On" />
+            tools:text="Files for upload" />
 
         <Button
             android:id="@+id/uploadProducts_Button"
@@ -62,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/marginL"
             android:text="@string/upload_products"
+            app:enableUpload="@{viewModel.productCount}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/addProducts_Button"
             app:layout_constraintVertical_bias="0.5" />
